fixed alignment issues and got cards built on results page

--- a/frontend/src/ui/App.css
+++ b/frontend/src/ui/App.css
@@ -1,8 +1,44 @@
-.home-image{
-    background: url("");
+/*.home-image {*/
+/*    background-size: cover;*/
+/*    background: url("../Images/blankcard.png") no-repeat fixed center center;*/
+/*    height: 100vh;*/
+/*}*/
+
+.vh-10{
+    height: 10vh;
+}
+
+.navbarfont{
+    font-size:large;
+}
+
+.backgroundhome{
+    background-color: saddlebrown;
+}
+
+#dragon{
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    height: 100vh;
-)
+    background: lightgray url(../Images/shimmerdragon.jpg) no-repeat center;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.button-container{
+    justify-content: space-between;
+    width: 200px
+}
+
+.homepage-text{
+    font-size: large;
+    color: white;
+}
+
+.browse-background{
+    background-color: lightgray;
+    background-size: cover;
+    height: 100%;
+}
